--- a/[B3]_Forecast_|_BAZA3.ipynb
+++ b/[B3]_Forecast_|_BAZA3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPjbsjcfDbTBfggZIgxRLLI",
+      "authorship_tag": "ABX9TyMJHGL4WMwlNEOuz1GSwP63",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,6 +117,17 @@
       ],
       "metadata": {
         "id": "yPpHIgUZ2V69"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "os.kill(os.getpid(), 9)"
+      ],
+      "metadata": {
+        "id": "JKPg_Ro8_ZUY"
       },
       "execution_count": null,
       "outputs": []
